# Lyra-Assistant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml
Backend/: .gitignore  pyproject.toml
Backend/assistantbackend/: .env.example
Backend/assistantbackend/assistantbackend/: asgi.py  settings.py  urls.py  wsgi.py
Backend/assistantbackend/gemmachat/: apps.py  models.py  serializers.py  urls.py  views.py
Backend/assistantbackend/gemmachat/migrations/: 0001_initial.py  0002_chatmessage_is_system_call.py
Backend/assistantbackend/llmchat/: admin.py  apps.py  models.py  tools.py  urls.py  views.py
Backend/assistantbackend/llmchat/migrations/: 0002_chatmessage_is_system_call.py
Backend/assistantbackend/lyraassistant/: apps.py  jitter.py  predict_services.py  serializers.py  urls.py  views.py
Frontend/: .gitignore  package.json
Frontend/src/: App.tsx  ChatLyraPage.tsx  Header.tsx  HomePage.tsx  index.css  index.html  oklchTypes.ts
backend/: pyproject.toml
backend_test/assistantbackend/: manage.py
frontend/src/: App.tsx
frontend_test/src/: Header.tsx
models/: Lyra1.6.pt  Lyra2.0.pt  Lyra2.1.pt  Lyra2.5.pt
scripts/: convert_lyra_jld2_to_pytorch.py  convert_lyra_jld2_to_pytorch_20260227.py  lyra_torch_infer.py
scripts/model_conversion_debug/: inspect_lyra_jld2.py  inspect_lyra_pt.py
src/: App.tsx  Header.tsx  index.css  index.html
src/components/: ColorController.tsx  GitHubIcon.tsx  GradientBox.tsx  (+3 more)
src/lyra_inference/: pyproject.toml
src/lyra_inference/src/lyra_inference/: __init__.py  inference.py  model.py
(+19 files in other folders)
