[project]
name = "lyra-python-ver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv.workspace]
members = [
    "src/lyra_utils",
    "src/lyra_inference",
]
