[project]
name = "lyra-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zzztzzzt", email = "180073683+zzztzzzt@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
